<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation"
                android:layout_marginTop="@dimen/cardMargin"
                android:layout_marginLeft="@dimen/cardMargin"
                android:layout_marginRight="@dimen/cardMargin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/shape_paragraph">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/homeImageViewHeight"
                        android:src="@drawable/aicon_logo_horizontal"
                        android:layout_marginEnd="30dp"
                        android:layout_marginStart="30dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white_700"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="@dimen/titleSize"
                        android:textColor="@color/blue_500"
                        android:layout_marginRight="@dimen/homeSubtitleMargin"
                        android:layout_marginLeft="@dimen/homeSubtitleMargin"
                        android:layout_marginTop="@dimen/homeSubtitleMargin"
                        android:text="@string/home_frag_tv_what_is"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white_700"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/homeSubtitleSize"
                        android:textColor="@color/blue_700"
                        android:layout_marginRight="@dimen/homeSubtitleMargin"
                        android:layout_marginLeft="@dimen/homeSubtitleMargin"
                        android:layout_marginTop="@dimen/homeSubtitleMargin"
                        android:layout_marginBottom="@dimen/homeSubtitleMargin"
                        android:text="@string/home_frag_tv_what_is_resp"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>




            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation"
                android:layout_marginTop="@dimen/cardMargin"
                android:layout_marginLeft="@dimen/cardMargin"
                android:layout_marginRight="@dimen/cardMargin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/shape_paragraph">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/homeImageViewHeight"
                        android:src="@drawable/deep_learning_presentation"
                        android:scaleType="centerCrop"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white_700"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="@dimen/titleSize"
                        android:textColor="@color/blue_500"
                        android:layout_marginRight="@dimen/homeSubtitleMargin"
                        android:layout_marginLeft="@dimen/homeSubtitleMargin"
                        android:layout_marginTop="@dimen/homeSubtitleMargin"
                        android:text="@string/home_frag_tv_why"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white_700"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/homeSubtitleSize"
                        android:textColor="@color/blue_700"
                        android:layout_marginRight="@dimen/homeSubtitleMargin"
                        android:layout_marginLeft="@dimen/homeSubtitleMargin"
                        android:layout_marginTop="@dimen/homeSubtitleMargin"
                        android:layout_marginBottom="@dimen/homeSubtitleMargin"
                        android:text="@string/home_frag_tv_why_resp"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>






            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation"
                android:layout_marginTop="@dimen/cardMargin"
                android:layout_marginLeft="@dimen/cardMargin"
                android:layout_marginRight="@dimen/cardMargin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/shape_paragraph">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:src="@drawable/ai_branches_banner"
                        android:scaleType="centerCrop"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white_700"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="@dimen/titleSize"
                        android:textColor="@color/blue_500"
                        android:layout_marginRight="@dimen/homeSubtitleMargin"
                        android:layout_marginLeft="@dimen/homeSubtitleMargin"
                        android:layout_marginTop="@dimen/homeSubtitleMargin"
                        android:text="@string/home_frag_tv_info"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white_700"
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/homeSubtitleSize"
                        android:textColor="@color/blue_700"
                        android:layout_marginRight="@dimen/homeSubtitleMargin"
                        android:layout_marginLeft="@dimen/homeSubtitleMargin"
                        android:layout_marginTop="@dimen/homeSubtitleMargin"
                        android:layout_marginBottom="@dimen/homeSubtitleMargin"
                        android:text="@string/home_frag_tv_info_resp"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>




        </LinearLayout>

    </ScrollView>

</FrameLayout>